--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
-    "cp": "cp index.html ./dist/"
+    "cp": "cp ./src/index.html ./dist/"
   },
   "dependencies": {
     "brace": "^0.11.1",
